test: add more tests